fix content alignment on first screen

--- a/css/style.css
+++ b/css/style.css
@@ -146,13 +146,13 @@ h6 {
 }
 
 #header #logo h1 {
-  font-size: 34px;
+  font-size: 20px;
   margin: 0;
   padding: 0;
   line-height: 1;
   font-family: "Montserrat", sans-serif;
   font-weight: 700;
-  letter-spacing: 3px;
+  letter-spacing: 2px;
 }
 
 #header #logo h1 a,
@@ -163,7 +163,7 @@ h6 {
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
   font-weight: 500;
-  font-size: 19px;
+  font-size: 16px;
 }
 
 #header #logo img {
@@ -231,8 +231,8 @@ h6 {
 #intro h3 {
   color: indigo;
   margin-bottom: 30px;
-  font-size: 28px;
-  font-weight: 700;
+  font-size: 30px;
+  font-weight: 500;
 }
 
 #intro p {
@@ -1518,7 +1518,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .home-text {
-  margin-top: 200px;
+  position: absolute;
+  top: 150px;
+  left: 30px;
 }
 
 @media (min-width: 992px) {
